More changes to set properties on target instead of vars.

--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -15,19 +15,14 @@ include("CMakeEnv")
 
 include("nRF5")
 
-
 # v14.2 sources and includes already defined
 # TODO fix this
 
-# vars that configure scripts
-set(NRF_FAMILY "nrf52")
 
-set(SOFTDEVICE "s132")
-set(CHIP "52832")
 
 set(NRF5_LINKER_SCRIPT "${CMAKE_SOURCE_DIR}/gcc_nrf52.ld")
 
-nRF5CheckSetupPreconditions()
+# OBSOLETE nRF5CheckSetupPreconditions()
 nRF5SetBuildOptions()
 nRF5SetIncludePaths()
 
@@ -35,24 +30,23 @@ nRF5SetIncludePaths()
 # according to what you are building (library, or minimal executable, or BLE executable, or multiprotocol)
 nRF5SetSDKSourcesBasic()
 
-# Define SDK_SOURCES_STARTUP
-nRF5SDKSourcesStartup()
-
 add_executable(Foo "")
-
+set_target_properties( Foo
+    PROPERTIES
+       CHIP "nrf52832_xxaa"
+       SOFTDEVICE "s132"
+       FLOAT_ABI "soft"
+    )
+nRF5CheckTargetProperties(Foo)
 # Set paths and other definitions ON the executable target
-nRF5SetSoftdeviceIncludePaths( "Foo" ${SOFTDEVICE})
-nRF5SetSoftdeviceDefinitions( "Foo" ${SOFTDEVICE})
-nRF5SetChipCompileDefinitions( "Foo" ${CHIP})
+nRF5ConfigTargetByProperties(Foo)
+nRF5SDKSetTargetStartupSources(Foo)
 
 target_sources(Foo
    PUBLIC
       main.cpp
       "${SDK_SOURCES}"
-      "${SDK_SOURCES_STARTUP}"
    )
-
-nRF5SetSoftdeviceIncludePaths(Foo "s132")
 
 nRF5GenerateOtherArtifacts(Foo)
 nRF5AddCustomTargets(Foo)
